--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"daisyui": "^5.0.35",
 		"drizzle-kit": "^0.31.1",
 		"jsdom": "^26.0.0",
 		"svelte": "^5.0.0",
