--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
 	},
 	"dependencies": {
 		"bits-ui": "^1.4.7",
+		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
+		"postgres": "^3.4.5",
 		"zod": "^3.24.4"
 	}
 }
