--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
 		]
 	},
 	"dependencies": {
+		"@oslojs/crypto": "^1.0.1",
+		"@oslojs/encoding": "^1.1.0",
 		"bits-ui": "^1.4.7",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.43.1",
+		"lucia": "^3.2.2",
 		"postgres": "^3.4.5",
 		"zod": "^3.24.4"
 	}
